--- a/meta/main.yml
+++ b/meta/main.yml
@@ -3,17 +3,17 @@
 dependencies: []
 
 galaxy_info:
-  role_name: '_template'
-  author: 'SGS - Swatchgroup Services Limited'
-  description: 'This is the ansible _template'
-  company: 'Swatchgroup Services Limited'
-  min_ansible_version: '2.0.0'
+  role_name: 'gitea'
+  author: 'Anton Mueller'
+  description: 'this role generates a generates a git server w/ a webgui based on gitea'
+  min_ansible_version: '2.9.0'
   platforms:
     - name: Ubuntu
       versions:
-        - xenial
+        - bionic 
+        - 
     - name: EL
       versions:
-        - 6
-        - 7
+        - 7 
+        - 9 
   galaxy_tags: []
