--- a/tasks/installation.yml
+++ b/tasks/installation.yml
@@ -1,1 +1,18 @@
 ---
+# gittea_version: 1.12.5
+# gitea_os: linux
+# gitea_arch: amd64
+- name: Download gitea binary from github
+  get_url:
+    url: "https://github.com/go-gitea/gitea/releases/download/v{{ gitea_ver }}/gitea-{{ gitea_ver }}-{{ gitea_os }}-{{ gitea_arch }}"
+    dest: "/var/gitea/bin/gittea-{{ gittea_ver }}" 
+    mode: '0775'
+
+- name: Create a symbolic link for gittea
+  file:
+    src: "/var/gitea/bin/gittea-{{ gittea_ver }}"
+    dest: /usr/local/bin/gittea
+    owner: gitea 
+    group: root 
+    state: link
+
